completed readme about contributing + site footer

--- a/locales/en.json
+++ b/locales/en.json
@@ -82,6 +82,9 @@
 		"layout": {
 			"adminTopBar": {
 				"copyOverlayUrl": "Copy overlay's URL for OBS"
+			},
+			"footer": {
+				"madeBy": "Made with ❤️ by Halo Création"
 			}
 		},
 		"twitch": {
